force-app/main/default/objects/Indicator__c/Indicator__c.object-meta.xml
<CustomObject>
    <description>Represents an indicator for LEI grantmaking analysis</description>
    <label>Indicator</label>
    <nameField>
        <label>Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indicators</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>