force-app/main/default/objects/Indicator__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The code associated with this indicator</description>
    <inlineHelpText>The code associated with this indicator</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>