force-app/main/default/objects/Indicator__c/fields/GM_Data_field_name__c.field-meta.xml
<CustomField>
    <fullName>GM_Data_field_name__c</fullName>
    <description>If non-blank, then update this field in GM Data when assignments to this indicator are made.</description>
    <inlineHelpText>If non-blank, then update this field in GM Data when assignments to this indicator are made.</inlineHelpText>
    <label>GM Data field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>