force-app/main/default/objects/Indicator__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes related to this indicator</description>
    <inlineHelpText>Notes related to this indicator</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>