force-app/main/default/objects/Indicator__c/fields/Outcome_type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_type__c</fullName>
    <description>The outcome type of this indicator</description>
    <inlineHelpText>The outcome type of this indicator</inlineHelpText>
    <label>Outcome type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Laws and policies</fullName>
            </value>
            <value>
                <fullName>Movement building</fullName>
            </value>
            <value>
                <fullName>Social norms</fullName>
            </value>
            <value>
                <fullName>Organizational Strengthening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>