force-app/main/default/objects/Indicator__c/fields/Requires_comment__c.field-meta.xml
<CustomField>
    <fullName>Requires_comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if assignments of this indicator require a comment to be entered</description>
    <inlineHelpText>Checked if assignments of this indicator require a comment to be entered</inlineHelpText>
    <label>Requires comment</label>
    <type>Checkbox</type>
</CustomField>