force-app/main/default/objects/Indicator__c/fields/Requires_number__c.field-meta.xml
<CustomField>
    <fullName>Requires_number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if assignments of this indicator require a number/quantity to be entered</description>
    <inlineHelpText>Checked if assignments of this indicator require a number/quantity to be entered</inlineHelpText>
    <label>Requires number</label>
    <type>Checkbox</type>
</CustomField>