force-app/main/default/objects/Indicator__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this indicator.  This field is used to group indicators in review forms.</description>
    <inlineHelpText>The type of this indicator.  This field is used to group indicators in review forms.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indicator_type</valueSetName>
    </valueSet>
</CustomField>