force-app/main/default/objects/Indicator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Outcome_type__c</columns>
    <columns>GM_Data_field_name__c</columns>
    <columns>Code__c</columns>
    <columns>Requires_number__c</columns>
    <columns>Requires_comment__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>